Centered Register and Login Heading

--- a/templates/registrations/login_form.html
+++ b/templates/registrations/login_form.html
@@ -97,7 +97,7 @@
 
 {% block content %}
 
-<h2>Login User</h2>
+<h2 style="text-align: center;">Login User</h2>
 <form method="POST">
   {% csrf_token %}
   <input type="text" name="username" placeholder="Username" required><br><br>
