--- a/templates/registrations/register.html
+++ b/templates/registrations/register.html
@@ -103,7 +103,7 @@ User Register Page
 
 <h1>USER REGISTRATION FORM</h1>
 
-<h2>Register User</h2>
+<h2 style="text-align: center;">Register User</h2>
 <form method="POST">
   {% csrf_token %}
   <input type="text" name="username" placeholder="Username" required><br><br>
